[gd_scene load_steps=14 format=3 uid="uid://dvihby5h57lu1"]

[ext_resource type="Script" path="res://Synth_scene/Settings/Settings.gd" id="1_nj8ct"]
[ext_resource type="Script" path="res://Synth_scene/Settings/Sound_slider.gd" id="2_4ncgg"]
[ext_resource type="PackedScene" uid="uid://biyyejk3jgomd" path="res://Main_menu/main.tscn" id="2_yn2v3"]
[ext_resource type="Texture2D" uid="uid://bkw208nsll0on" path="res://Synth_scene/Synth/UI/transparentLight29.png" id="3_hiqwn"]
[ext_resource type="Texture2D" uid="uid://b38gx5fc4wb4c" path="res://Animation/UI Animation/Standart Button Active 2.png" id="4_8tgc1"]
[ext_resource type="Texture2D" uid="uid://ciojclcw8mp4w" path="res://Animation/UI Animation/Standart Button Disable 2.png" id="5_p587k"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vx0hn"]
texture = ExtResource("4_8tgc1")
modulate_color = Color(0.835294, 0.254902, 0.968627, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gs0vp"]
texture = ExtResource("4_8tgc1")
modulate_color = Color(0, 0.72549, 0.85098, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ljdm2"]
texture = ExtResource("4_8tgc1")
modulate_color = Color(0.478431, 0.270588, 1, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6gvdj"]
texture = ExtResource("5_p587k")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dqoi3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yfuoo"]
texture = ExtResource("3_hiqwn")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_b60il"]
texture = ExtResource("3_hiqwn")
modulate_color = Color(0.603922, 0.603922, 0.603922, 1)

[node name="Settings" type="CanvasLayer"]
script = ExtResource("1_nj8ct")
menu_animation = ExtResource("2_yn2v3")

[node name="Panel_Settings" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Panel_Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133333, 0.133333, 0.133333, 0.803922)

[node name="MarginContainer" type="MarginContainer" parent="Panel_Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 250
theme_override_constants/margin_right = 250

[node name="VBoxContainer" type="VBoxContainer" parent="Panel_Settings/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="Panel_Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 16
columns = 2

[node name="Music_label" type="Label" parent="Panel_Settings/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "
Music

"

[node name="Music_slider" type="HSlider" parent="Panel_Settings/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("2_4ncgg")
bus_name = "Music"

[node name="Synth_label" type="Label" parent="Panel_Settings/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "
Synth

"

[node name="Synth_slider" type="HSlider" parent="Panel_Settings/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("2_4ncgg")
bus_name = "Synth"

[node name="SFX_label" type="Label" parent="Panel_Settings/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Sound
effects

"

[node name="SFX_slider" type="HSlider" parent="Panel_Settings/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("2_4ncgg")
bus_name = "SFX"

[node name="Container" type="HBoxContainer" parent="Panel_Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel_Settings/MarginContainer/VBoxContainer/Container"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Select" type="Button" parent="Panel_Settings/MarginContainer/VBoxContainer/Container/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_vx0hn")
theme_override_styles/hover = SubResource("StyleBoxTexture_gs0vp")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ljdm2")
theme_override_styles/disabled = SubResource("StyleBoxTexture_6gvdj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_dqoi3")
text = "SELECT"

[node name="Menu" type="Button" parent="Panel_Settings/MarginContainer/VBoxContainer/Container/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_vx0hn")
theme_override_styles/hover = SubResource("StyleBoxTexture_gs0vp")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ljdm2")
theme_override_styles/disabled = SubResource("StyleBoxTexture_6gvdj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_dqoi3")
text = "MENU"

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 73.0
grow_horizontal = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/margin_left = 1036
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 70
theme_override_constants/margin_bottom = 17

[node name="Settings" type="Button" parent="MarginContainer2"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_yfuoo")
theme_override_styles/hover = SubResource("StyleBoxTexture_b60il")

[connection signal="value_changed" from="Panel_Settings/MarginContainer/VBoxContainer/GridContainer/Music_slider" to="Panel_Settings/MarginContainer/VBoxContainer/GridContainer/Music_slider" method="_on_value_changed"]
[connection signal="value_changed" from="Panel_Settings/MarginContainer/VBoxContainer/GridContainer/Synth_slider" to="." method="_on_synth_slider_value_changed"]
[connection signal="value_changed" from="Panel_Settings/MarginContainer/VBoxContainer/GridContainer/SFX_slider" to="Panel_Settings/MarginContainer/VBoxContainer/GridContainer/SFX_slider" method="_on_value_changed"]
[connection signal="pressed" from="Panel_Settings/MarginContainer/VBoxContainer/Container/VBoxContainer/Select" to="." method="_on_select_pressed"]
[connection signal="pressed" from="Panel_Settings/MarginContainer/VBoxContainer/Container/VBoxContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="MarginContainer2/Settings" to="." method="_on_settings_pressed"]
